# argos

./: .env.example  LICENSE  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 90e816a15398_unique_product_sources_product_id_url.py  e3389e383ded_initial_schema.py
backend/scripts/: export_openapi.py
backend/src/argos/: config.py  logging.py  worker.py
backend/src/argos/api/: app.py  deps.py  schemas.py
backend/src/argos/api/routes/: alerts.py  products.py
backend/src/argos/db/: engine.py  models.py  repositories.py
backend/src/argos/graph/: orchestrator.py  state.py
backend/src/argos/graph/nodes/: extract.py  match.py  save.py  search.py
backend/src/argos/services/: alerts.py  fetcher.py  llm.py
backend/tests/test_graph/: test_fanout.py
frontend/: orval.config.ts  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: backend.ts  fetch.ts  openapi.json
frontend/src/components/: PriceChart.tsx  ProductCard.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  ProductDetail.tsx
litellm/: config.yaml
scripts/: verify-images.sh
